# DRF

./: pyproject.toml
django_rest_todo/: db.sqlite3
django_rest_todo/django_rest_todo/: asgi.py  settings.py  urls.py  wsgi.py
django_rest_todo/django_rest_todo/api/: apps.py  models.py  serializers.py  views.py
django_rest_todo/django_rest_todo/api/migrations/: 0001_initial.py
django_rest_todo/django_rest_todo/api/static/: core.js  index.html
